Fix button alignment in production site

--- a/css/original.css
+++ b/css/original.css
@@ -163,6 +163,7 @@ section {
   border-radius: 40px;
   color: #0F2C34;
   display: inline;
+  margin-top: 20px;
   font-family: Montserrat;
   font-size: 24px;
   font-weight: 700;
